<resources>
    <string name="app_name">Fotosintesis</string>
    <string name="daftarPustaka">Harahap, Fauziyah (2012) FISIOLOGI TUMBUHAN : SUATU PENGANTAR. Unimed Press, Medan. ISBN 978-602-8848-88-6</string>
    <string name="txtjenjang">Jenjang : SMP/MTs</string>
    <string name="txtkelas">Kelas : VIII</string>
    <string name="teksfoto">Fotosintesis berasal dari kata Foton cahaya, sintesis penyusunan. Fotosintesis adalah peristiwa penyusunan zat organik (gula) dari zat anorganik (air, karbondioksida) dengan pertolongan energi cahaya matahari. Karena bahan baku yang dipergunakan adalah zat karbon (karbondioksida), maka dapat juga disebut asimilasi zat karbon. Perhatikan gambar berikut!</string>
    <string name="teksproses">Pada dasarnya, proses fotosintesis merupakan kebalikan dari pernapasan. Proses pernapasan bertujuan memecah gula menjadi karbondioksida, air dan energi. Sebaliknya proses fotosintesis mereaksikan (menggabungkan) karbondioksida dan air menjadi gula dengan menggunakan energi cahaya matahari. Proses fotosintesis umumnya hanya berlangsung pada tumbuhan yang berklorofil pada waktu siang hari asalkan ada sumber cahaya. Perhatikan Gambar berikut!</string>
    <string name="teksreaksiterang">Reaksi terang merupakan proses yang terjadi dengan membutuhkan cahaya matahari. Reaksi terang terjadi didalam salah satu ruang kosong pada kloroplas yang disebut dengan membrane tilakoid. Dalam reaksi terang ini, klorofil akan menyerap cahaya matahari. Energi yan didapatkan dari cahaya matahari ini akan digunakan untuk memecah molekul air menjadi molekul oksigen serta hidrogen. Reaksi ini juga disebut dengan fotolisis.\nBerikut ini teks rumus kimia fotosintesis :</string>
    <string name="teksreaksigelap">Reaksi gelap adalah reaksi yang dapat terjadi tanpa menggunakan bantuan cahaya matahari. Proses reaksi gelap adalah pengubahan karbondioksida (CO2) menjadi glukosa. Reaksi gelap ini terjadi pada stroma kloroplas. Reaksi gelap hanya dapat terjadi setelah terjadinya reaksi terang. Pada proses reaksi gelap sangatlah kompleks.</string>
    <string name="teksfoto2">Sumber Gambar : https://www.utakatikotak.com</string>
    <string name="teksproses2">Sumber Gambar : https://jagad.id</string>
    <string name="teksproses3">Reaksi fotosintesis pada umumnya terbagi menjadi dua yaitu : Reaksi Terang dan Reaksi Gelap, Untuk lebih jelasnya silahkan klik tombol selanjutnya</string>
    <string name="teksreaksiterang2">6CO₂ + 6H₂O + energi cahaya → C₆H₁₂O₆ + 6O₂</string>
    <string name="tekskloroplas">Kloroplas adalah bagian dari plastid yang mengandung klorofil. Di dalam kloroplas, berlangsung fase terang dan fase gelap dari fotosintesis tumbuhan. Kloroplas terdapat pada hampir seluruh tumbuhan, tetapi tidak umum dalam semua sel. Bila terdapat kloroplas, tiap sel dapat memiliki satu sampai banyak plastid. Umumnya, pada tumbuhan tingkat tinggi, kloroplas berbentuk cakram (kira-kira 2 × 5 mm, kadang-kadang lebih besar), tersusun dalam lapisan tunggal dalam sitoplasma. Namun, bentuk dan posisinya berubah-ubah sesuai dengan intensitas cahaya. Pada ganggang, bentuknya dapat seperti mangkuk, spiral, bahkan bintang yang menyerupai jaring dan sering kali disertai pirenoid.</string>
    <string name="teksklorofil">Klorofil atau zat hijau daun (terjemah langsung dari bahasa Belanda, bladgroen) adalah pigmen yang dimiliki oleh berbagai organisme dan menjadi salah satu molekul berperan utama dalam fotosintesis. Klorofil memberi warna hijau pada daun tumbuhan hijau dan alga hijau, tetapi juga dimiliki oleh berbagai alga lain, dan beberapa kelompok bakteri fotosintetik. Molekul klorofil menyerap cahaya merah, biru, dan ungu, serta memantulkan cahaya hijau dan sedikit kuning, sehingga mata manusia memvisualisasikan sebagai warna hijau. Pada tumbuhan darat dan alga hijau, klorofil dihasilkan dan terisolasi pada plastida yang disebut kloroplas.\n\nSelain berbeda rumus kimia, jenis-jenis klorofil ini juga berbeda pada panjang gelombang cahaya yang diserapnya. Meskipun bervariasi, semua klorofil memiliki struktur kimia yang bermiripan, yaitu terdiri dari porfirin tertutup (siklik), suatu tetrapirol, dengan ion magnesium di pusatnya dan \"ekor\" terpena. Kedua gugus ini adalah kromofor (\"pembawa warna\") dan berkemampuan mengeksitasi elektron apabila terkena cahaya pada panjang gelombang tertentu.\nKarena peran klorofil, tumbuhan darat dapat membuat makanannya sendiri dengan bantuan cahaya matahari sehingga menjadi organisme autotrof.</string>
    <string name="teksfaktor">1. Intensitas cahaya\n\t\t Laju fotosintesis maksimum ketika banyak cahaya</string>
    <string name="teksfaktor2">2. Konsentrasi karbondioksida\n\t\t Semakin banyak karbondioksida di udara,\n\t\t makin banyak jumlah bahan yang dapat \n\t\t digunakan tumbuhan untuk melangsungkan \n\t\t fotosintesis</string>
    <string name="teksfaktor3">3. Suhu\n\t\t Enzim-enzim yang bekelja dalam proses\n\t\t fotosintesis hanya dapat bekelja pada\n\t\t suhu optimalnya. Umumnya laju \n\t\t fotosintensis meningkat seiring dengan meningkatnya \n\t\t suhu hingga batas toleransi enzim.</string>
    <string name="teksfaktor4">4. Kadar air \n\t\t Kekurangan air atau kekeringan \n\t\t menyebabkan stomata menutup, menghambat \n\t\t penyerapan karbon dioksida sehingga \n\t\t mengurangi laju fotosintesis</string>
    <string name="teksfaktor5">5. Kadar fotosintat (hasil fotosintesis) \n\t\t Kadar fotosintat seperti karbohidrat berkurang, \n\t\t laju fotosintesis akan naik. Bila kadar fotosintat \n\t\t bertambah atau bahkan sampai jenuh, laju \n\t\t fotosintesis akan berkurang.</string>
    <string name="teksfaktor1">Faktor Penentu Laju Fotosintesis :\n\t\t Berikut adalah beberapa faktor utama yang \n\t\t menentukan laju fotosintesis</string>
    <string name="tekskomp">1. Mampu menghubungkan karakteristik \n\t\t proses fotosintesis untuk kehidupan \n\t\t mahluk hidup.</string>
    <string name="teksKD">Kompetensi Dasar :</string>
    <string name="tekskomp2">2. Mampu mendiskripsikan proses reaksi\n\t\t terang dan gelap.</string>
    <string name="tekskomp3">3. Mampu Menguraikan faktor yang \n\t\t mempengaruhi proses fotosintesis.</string>
    <string name="instruksi">Petunjuk : </string>
    <string name="petunjuk"> 1.\t Uji Pemahaman ini terdiri atas 20\n\t\t\t soal pilihan ganda dengan KKM 70.\n\n 2.\t Kemudian klik tombol mulai untuk mengerjakan.\n\n 3.\t Klik tombol pilihan untuk memilih jawaban.</string>
    <string name="kloropas2">Kloroplas matang pada beberapa ganggang. Biofita dan likopoda dapat memperbanyak diri dengan pembelahan. Kesinambungan kloroplas terjadi melalui pertumbuhan dan pembelahan proplastid di daerah meristem. Secara khas, kloroplas dewasa mencakup dua membran luar yang menyeliputi stroma homogen. Di sinilah, berlangsung reaksi-reaksi fase gelap. Dalam stroma, tertanam sejumlah granum. Tiap granum terdiri dari setumpuk tilakoid yang berupa gelembung bermembran, pipih, dan diskoid (seperti cakram). Membran tilakoid menyimpan pigmen-pigmen fotosintesis dan sistem transpor elektron yang terlibat dalam fase fotosintesis yang bergantung pada cahaya. Biasanya, granum terkait dengan lamela intergranum yang bebas pigmen.</string>
    <string name="tekspencapaian">Tujuan Pembelajaran :</string>
    <string name="tekspencapaian2">1. Peserta didik mampu mendeskripsikan dan \n\t\tmenganalisis proses fotosintesis.</string>
    <string name="tekspencapaian3">2. Peserta didik mampu membandingkan dan \n\t\tmembedakan proses reaksi terang dan gelap \n\t\tpada saat proses fotosintesis terjadi.</string>
    <string name="tekspencapaian4">3. Peserta didik mampu menganalisis faktor - faktor \n\t\t yang mempengaruhi proses fotosintesis, baik \n\t\tfaktor internal ataupun eksternal</string>
</resources>