<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgkosong2"
    android:orientation="vertical"
    tools:context=".ProsesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp100"
            android:layout_centerHorizontal="true"
            android:src="@drawable/hfotosintesis" />

        <Button
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:background="@drawable/bexit"
            android:onClick="close" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparanGrey50" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/transparanWhite"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtproses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp16"
                    android:text="@string/teksproses"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp17"
                    android:textAlignment="inherit"/>

                <ImageView
                    android:layout_width="360dp"
                    android:layout_height="280dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/dp4"
                    android:src="@drawable/fotosintesis2" />

                <TextView
                    android:id="@+id/txtsumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/dp4"
                    android:text="@string/teksproses2"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp10" />

                <TextView
                    android:id="@+id/txtprosess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp16"
                    android:text="@string/teksproses3"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp17"
                    android:textAlignment="inherit"/>

            </LinearLayout>

            <WebView
                android:id="@+id/webyutub"
                android:layout_width="350dp"
                android:layout_height="@dimen/dp200"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp4"
                android:text="Klik Tombol Play Untuk Memutar Video"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp10" />

            <RelativeLayout
                android:layout_width="@dimen/dp130"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp16">

                <Button
                    android:layout_width="@dimen/dp60"
                    android:layout_height="@dimen/dp60"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/dp8"
                    android:background="@drawable/bplay"
                    android:onClick="Play" />

                <Button
                    android:id="@+id/btn_kanan"
                    android:layout_width="@dimen/dp60"
                    android:layout_height="@dimen/dp60"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/dp8"
                    android:background="@drawable/bkanan" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>